--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ fp-info-cache
 # Backup folder
 STM32_Nixie-backups/
 
+
 # Eclipse
 .metadata
 bin/
@@ -89,3 +90,6 @@ local.properties
 # Uncomment this line if you wish to ignore the project description file.
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
+
+# Mac specific
+.DS_Store
