--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+*auto_saved_files*
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -96,3 +97,6 @@ local.properties
 
 # LTSpice Results
 *.raw
+*.plt
+*.log
+*.net
