Updating Cmake file to include new main_app.cpp. Also fixing RAM syntax error in linker script caused by the latest version of CubeMX *sigh*

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -48,6 +48,7 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
+    Core/Src/main_app.cpp
 )
 
 # Add include paths
