--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,97 +1,61 @@
-// {
-//     // Use IntelliSense to learn about possible attributes.
-//     // Hover to view descriptions of existing attributes.
-//     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-//     "version": "0.2.0",
-//     "configurations": [
-//         {
-//             "name": "Build & Debug Microcontroller - ST-Link",
-//             "cwd": "${workspaceFolder}",
-//             "type": "cortex-debug",
-//             "executable": "${command:cmake.launchTargetPath}",
-//             // Let CMake extension decide executable: "${command:cmake.launchTargetPath}"
-//             // Or fixed file path: "${workspaceFolder}/path/to/filename.elf"
-//             "request": "launch",
-//             "servertype": "stlink",
-//             "device": "STM32F100C4Tx", //MCU used
-//             "interface": "swd",
-//             "serialNumber": "",        //Set ST-Link ID if you use multiple at the same time
-//             "runToEntryPoint": "main",
-//             "svdFile": "${config:STM32VSCodeExtension.cubeCLT.path}/STMicroelectronics_CMSIS_SVD/STM32F100.svd",
-//             "v1": false,               //Change it depending on ST Link version
-//             "serverpath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-//             "stm32cubeprogrammer":"${config:STM32VSCodeExtension.cubeCLT.path}/STM32CubeProgrammer/bin",
-//             "stlinkPath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",   
-//             "armToolchainPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin",
-//             "gdbPath":"${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin/arm-none-eabi-gdb",            
-//             "serverArgs": [
-//                 "-m","0",
-//             ],
-//             //"preLaunchTask": "Build + Flash"
-//             /* If you use external loader, add additional arguments */
-//             //"serverArgs": ["--extload", "path/to/ext/loader.stldr"],
-//         },
-//         {
-//             "name": "Attach to Microcontroller - ST-Link",
-//             "cwd": "${workspaceFolder}",
-//             "type": "cortex-debug",
-//             "executable": "${workspaceFolder}/firmware/build/Debug/stm32_nixie.elf",
-//             // Let CMake extension decide executable: "${command:cmake.launchTargetPath}"
-//             // Or fixed file path: "${workspaceFolder}/path/to/filename.elf"
-//             "request": "attach",
-//             "servertype": "stlink",
-//             "device": "STM32F100C4Tx", //MCU used
-//             "interface": "swd",
-//             "serialNumber": "",        //Set ST-Link ID if you use multiple at the same time
-//             "runToEntryPoint": "main",
-//             "svdFile": "${config:STM32VSCodeExtension.cubeCLT.path}/STMicroelectronics_CMSIS_SVD/STM32F100.svd",
-//             "v1": false,               //Change it depending on ST Link version
-//             "serverpath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-//             "stm32cubeprogrammer":"${config:STM32VSCodeExtension.cubeCLT.path}/STM32CubeProgrammer/bin",
-//             "stlinkPath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",   
-//             "armToolchainPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin",
-//             "gdbPath":"${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin/arm-none-eabi-gdb",            
-//             "serverArgs": [
-//                 "-m","0",
-//             ],
-//             /* If you use external loader, add additional arguments */
-//             //"serverArgs": ["--extload", "path/to/ext/loader.stldr"],
-//         }
-//             ]
-// }
-
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "STM32 Debug",
-            "type": "cortex-debug",
-            "request": "launch",
+            "name": "Build & Debug Microcontroller - ST-Link",
             "cwd": "${workspaceFolder}",
-            "executable": "${workspaceFolder}/firmware/build/Debug/stm32_nixie.elf",
+            "type": "cortex-debug",
+            "executable": "${command:cmake.launchTargetPath}",
+            // Let CMake extension decide executable: "${command:cmake.launchTargetPath}"
+            // Or fixed file path: "${workspaceFolder}/path/to/filename.elf"
+            "request": "launch",
             "servertype": "stlink",
-            "device": "STM32F100C4Tx",
+            "device": "STM32F100C4Tx", //MCU used
             "interface": "swd",
+            "serialNumber": "",        //Set ST-Link ID if you use multiple at the same time
             "runToEntryPoint": "main",
-            "showDevDebugOutput": "raw",
-            "armToolchainPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin",
-            "stlinkPath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-            "serverpath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-            "gdbPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin/arm-none-eabi-gdb",
             "svdFile": "${config:STM32VSCodeExtension.cubeCLT.path}/STMicroelectronics_CMSIS_SVD/STM32F100.svd",
-            "overrideGDBServerStartup": true,
-            "customServerArgs": [
-                "-l", "31",
-                "-p", "61234",
-                "-cp", "${config:STM32VSCodeExtension.cubeCLT.path}/STM32CubeProgrammer/bin",
-                "-d"
+            "v1": false,               //Change it depending on ST Link version
+            "serverpath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
+            "stm32cubeprogrammer":"${config:STM32VSCodeExtension.cubeCLT.path}/STM32CubeProgrammer/bin",
+            "stlinkPath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",   
+            "armToolchainPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin",
+            "gdbPath":"${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin/arm-none-eabi-gdb",            
+            "serverArgs": [
+                "-m","0",
             ],
-            "postStartSessionCommands": [
-                "monitor reset halt"
+            //"preLaunchTask": "Build + Flash"
+            /* If you use external loader, add additional arguments */
+            //"serverArgs": ["--extload", "path/to/ext/loader.stldr"],
+        },
+        {
+            "name": "Attach to Microcontroller - ST-Link",
+            "cwd": "${workspaceFolder}",
+            "type": "cortex-debug",
+            "executable": "${workspaceFolder}/firmware/build/Debug/stm32_nixie.elf",
+            // Let CMake extension decide executable: "${command:cmake.launchTargetPath}"
+            // Or fixed file path: "${workspaceFolder}/path/to/filename.elf"
+            "request": "attach",
+            "servertype": "stlink",
+            "device": "STM32F100C4Tx", //MCU used
+            "interface": "swd",
+            "serialNumber": "",        //Set ST-Link ID if you use multiple at the same time
+            "runToEntryPoint": "main",
+            "svdFile": "${config:STM32VSCodeExtension.cubeCLT.path}/STMicroelectronics_CMSIS_SVD/STM32F100.svd",
+            "v1": false,               //Change it depending on ST Link version
+            "serverpath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
+            "stm32cubeprogrammer":"${config:STM32VSCodeExtension.cubeCLT.path}/STM32CubeProgrammer/bin",
+            "stlinkPath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",   
+            "armToolchainPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin",
+            "gdbPath":"${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin/arm-none-eabi-gdb",            
+            "serverArgs": [
+                "-m","0",
             ],
-            "preRestartCommands": [
-                "monitor reset halt"
-            ]
+            /* If you use external loader, add additional arguments */
+            //"serverArgs": ["--extload", "path/to/ext/loader.stldr"],
         }
-    ]
+            ]
 }
