Restructured to have seperate App folder

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -48,15 +48,16 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
-    Core/Src/main_app.cpp
-    Core/Src/hv5622_driver.cpp
-    Core/Src/nixie_display.cpp
+    Core/App/Src/main_app.cpp
+    Core/App/Src/hv5622_driver.cpp
+    Core/App/Src/nixie_display.cpp
 )
 
 # Add include paths
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user defined include paths
     Core/Inc
+    Core/App/Inc
 )
 
 # Add project symbols (macros)
