Mucking with cmake files to get clangd working right

--- a/firmware/cmake/stm32cubemx/CMakeLists.txt
+++ b/firmware/cmake/stm32cubemx/CMakeLists.txt
@@ -1,69 +1,85 @@
 cmake_minimum_required(VERSION 3.22)
 
-project(stm32cubemx)
+# Create INTERFACE library
 add_library(stm32cubemx INTERFACE)
 
-# Enable CMake support for ASM and C languages
-enable_language(C ASM)
+# All source files are relative to this directory - define a variable to make paths cleaner
+set(CUBEMX_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 
-target_compile_definitions(stm32cubemx INTERFACE 
-	USE_HAL_DRIVER 
-	STM32F100xB
-    $<$<CONFIG:Debug>:DEBUG>
+# Compiler definitions
+target_compile_definitions(stm32cubemx 
+    INTERFACE 
+        USE_HAL_DRIVER 
+        STM32F100xB
+        $<$<CONFIG:Debug>:DEBUG>
 )
 
-target_include_directories(stm32cubemx INTERFACE
-    ../../Core/Inc
-    ../../Drivers/STM32F1xx_HAL_Driver/Inc
-    ../../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy
-    ../../Drivers/CMSIS/Device/ST/STM32F1xx/Include
-    ../../Drivers/CMSIS/Include
+# Include directories - using our root variable
+target_include_directories(stm32cubemx 
+    INTERFACE
+        ${CUBEMX_ROOT_DIR}/Core/Inc
+        ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Inc
+        ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy
+        ${CUBEMX_ROOT_DIR}/Drivers/CMSIS/Device/ST/STM32F1xx/Include
+        ${CUBEMX_ROOT_DIR}/Drivers/CMSIS/Include
 )
 
-target_sources(stm32cubemx INTERFACE
-    ../../Core/Src/main.c
-    ../../Core/Src/gpio.c
-    ../../Core/Src/adc.c
-    ../../Core/Src/rtc.c
-    ../../Core/Src/spi.c
-    ../../Core/Src/tim.c
-    ../../Core/Src/usart.c
-    ../../Core/Src/stm32f1xx_it.c
-    ../../Core/Src/stm32f1xx_hal_msp.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_spi.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c
-    ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c
-    ../../Core/Src/system_stm32f1xx.c
-    ../../Core/Src/sysmem.c
-    ../../Core/Src/syscalls.c
-    ../../startup_stm32f100xb.s
+# Group source files by category for better organization
+set(CORE_SOURCES
+    ${CUBEMX_ROOT_DIR}/Core/Src/main.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/gpio.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/adc.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/rtc.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/spi.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/tim.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/usart.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/stm32f1xx_it.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/stm32f1xx_hal_msp.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/system_stm32f1xx.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/sysmem.c
+    ${CUBEMX_ROOT_DIR}/Core/Src/syscalls.c
 )
 
-target_link_directories(stm32cubemx INTERFACE
+set(HAL_SOURCES
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc_ex.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_spi.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c
+    ${CUBEMX_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c
 )
 
-target_link_libraries(stm32cubemx INTERFACE
+set(STARTUP_SOURCES
+    ${CUBEMX_ROOT_DIR}/startup_stm32f100xb.s
 )
 
-# Validate that STM32CubeMX code is compatible with C standard
+# Add all sources to the library
+target_sources(stm32cubemx 
+    INTERFACE
+        ${CORE_SOURCES}
+        ${HAL_SOURCES}
+        ${STARTUP_SOURCES}
+)
+
+# Validate C standard requirement
 if(CMAKE_C_STANDARD LESS 11)
-    message(ERROR "Generated code requires C11 or higher")
+    message(FATAL_ERROR "Generated code requires C11 or higher")
 endif()
 
-
+# Add build warning when Debug mode is active
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    message(STATUS "Building STM32CubeMX code in Debug mode")
+endif()
