Added time_lord class and added a blank digits function to the display

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -38,6 +38,7 @@ target_sources(${PROJECT_NAME}
         Core/App/Src/hv5622_driver.cpp
         Core/App/Src/nixie_display.cpp
         Core/App/Src/system_control.cpp
+        Core/App/Src/time_lord.cpp
 )
 
 # Configure includes
