Added virtual com port based UART debug messages

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -39,6 +39,7 @@ target_sources(${PROJECT_NAME}
         Core/App/Src/nixie_display.cpp
         Core/App/Src/system_control.cpp
         Core/App/Src/time_lord.cpp
+        Core/App/Src/debug.cpp
 )
 
 # Configure includes
