--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -41,6 +41,7 @@ target_sources(${PROJECT_NAME}
         Core/App/Src/time_lord.cpp
         Core/App/Src/debug.cpp
         Core/App/Src/user_input.cpp
+        Core/App/Src/menu.cpp
 )
 
 # Configure includes
