--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -42,6 +42,7 @@ target_sources(${PROJECT_NAME}
         Core/App/Src/debug.cpp
         Core/App/Src/user_input.cpp
         Core/App/Src/menu.cpp
+        Core/App/Src/time_utils.cpp
 )
 
 # Configure includes
